# prosesmasher

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  guardrail3.toml
apps/prosesmasher/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml  release-plz.toml  rustfmt.toml
apps/prosesmasher/.cargo/: mutants.toml
apps/prosesmasher/crates/adapters/inbound/cli/: Cargo.toml
apps/prosesmasher/crates/adapters/inbound/cli/assertions/: Cargo.toml
apps/prosesmasher/crates/adapters/inbound/cli/runtime/: Cargo.toml
apps/prosesmasher/crates/adapters/inbound/cli/src/: args.rs  args_tests.rs  checks.rs  checks_tests.rs  lib.rs  lib_tests.rs  main.rs  output.rs  output_tests.rs
apps/prosesmasher/crates/adapters/outbound/fs/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/fs/assertions/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/fs/presets/: full-config-en.json  substack-en.json
apps/prosesmasher/crates/adapters/outbound/fs/runtime/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/fs/src/: config_dto.rs  config_loader.rs  config_loader_tests.rs  file_reader.rs  file_reader_tests.rs  lib.rs
apps/prosesmasher/crates/adapters/outbound/parser/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/parser/assertions/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/parser/runtime/: Cargo.toml
apps/prosesmasher/crates/adapters/outbound/parser/src/: html_text.rs  lib.rs  lib_tests.rs  markdown.rs  markdown_tests.rs  segmenter.rs  segmenter_tests.rs  syllables.rs  syllables_tests.rs
apps/prosesmasher/crates/app/checks/cadence-patterns/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/cadence-patterns/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/catalog/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/catalog/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/core/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/core/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/document-policy/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/document-policy/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/flow/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/flow/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/heuristics/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/heuristics/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/lexical/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/lexical/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/llm-slop/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/llm-slop/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/persona-signals/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/persona-signals/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/readability/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/readability/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/rhetorical-framing/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/rhetorical-framing/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/style-signals/assertions/: Cargo.toml
apps/prosesmasher/crates/app/checks/style-signals/runtime/: Cargo.toml
apps/prosesmasher/crates/app/checks/test-support/: Cargo.toml
apps/prosesmasher/crates/app/checks/test-support/src/: builders.rs  lib.rs  result_helpers.rs
apps/prosesmasher/crates/app/core/: Cargo.toml
apps/prosesmasher/crates/app/core/src/: check.rs  lib.rs  runner.rs  runner_tests.rs  test_helpers.rs
apps/prosesmasher/crates/app/core/src/document_policy/: code_fences_tests.rs  heading_counts.rs  heading_counts_tests.rs  heading_hierarchy.rs  heading_hierarchy_tests.rs  mod.rs  sentence_case.rs  sentence_case_tests.rs  word_count_tests.rs
apps/prosesmasher/crates/app/core/src/patterns/: affirmation_closers.rs  affirmation_closers_tests.rs  colon_dramatic.rs  colon_dramatic_tests.rs  em_dashes.rs  em_dashes_tests.rs  exclamation_density.rs  exclamation_density_tests.rs  fake_timestamps.rs  fake_timestamps_tests.rs  false_question.rs  false_question_tests.rs  humble_bragger.rs  humble_bragger_tests.rs  jargon_faker.rs  jargon_faker_tests.rs  llm_openers.rs  llm_openers_tests.rs  mod.rs  negation_reframe.rs  negation_reframe_tests.rs  smart_quotes.rs  smart_quotes_tests.rs  summative_closer.rs  summative_closer_tests.rs  triple_repeat.rs  triple_repeat_tests.rs
apps/prosesmasher/crates/app/core/src/quality/: mod.rs
apps/prosesmasher/crates/app/core/src/readability/: avg_sentence_length.rs  avg_sentence_length_tests.rs  coleman_liau.rs  coleman_liau_tests.rs  flesch_kincaid.rs  flesch_kincaid_tests.rs  gunning_fog.rs  gunning_fog_tests.rs  mod.rs
apps/prosesmasher/crates/app/core/src/structure/: bold_density.rs  bold_density_tests.rs  code_fences.rs  code_fences_tests.rs  heading_counts.rs  heading_counts_tests.rs  heading_hierarchy.rs  heading_hierarchy_tests.rs  mod.rs  paragraph_length.rs  paragraph_length_tests.rs  sentence_case.rs  sentence_case_tests.rs  word_count.rs  word_count_tests.rs  word_repetition.rs  word_repetition_tests.rs
apps/prosesmasher/crates/app/core/src/terms/: banned_phrases.rs  banned_phrases_tests.rs  banned_words.rs  banned_words_tests.rs  forbidden_terms.rs  hedge_words.rs  (+14 more)
apps/prosesmasher/crates/domain/types/: Cargo.toml
apps/prosesmasher/crates/domain/types/assertions/: Cargo.toml
apps/prosesmasher/crates/domain/types/runtime/: Cargo.toml
apps/prosesmasher/crates/domain/types/src/: config.rs  document.rs  error.rs  lib.rs  lib_tests.rs  metadata.rs
apps/prosesmasher/crates/ports/outbound/traits/: Cargo.toml
apps/prosesmasher/presets/: README.md  article-en.json  article-long-en.json  article-medium-en.json  article-short-en.json  blog-strict-en.json  docs-en.json  email-en.json  essay-en.json  full-config-en.json  general-en.json  landing-page-en.json  substack-en.json  technical-article-en.json
apps/prosesmasher/presets/examples/: full-config-en.json
(+824 files in other folders)
