[package]
name = "prosesmasher"
version = "0.3.14"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/websmasher/prosesmasher"
description = "Deterministic prose quality validator (binstall-only stub; install via cargo binstall prosesmasher)"
readme = "README.md"
keywords = ["cli", "markdown", "validation", "writing", "lint"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "prosesmasher"
path = "src/main.rs"

[package.metadata.binstall]
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
disabled-strategies = ["quick-install", "compile"]

[package.metadata.binstall.overrides.'cfg(windows)']
pkg-fmt = "zip"

[package.metadata.binstall.overrides.'cfg(not(windows))']
pkg-fmt = "txz"
