[workspace]
members = [
    "crates/domain/types",
    "crates/ports/outbound/traits",
    "crates/app/core",
    "crates/adapters/inbound/cli",
    "crates/adapters/outbound/fs",
    "crates/adapters/outbound/parser",
    "packages/prosesmasher",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/websmasher/prosesmasher"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
warnings = "deny"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"

[workspace.dependencies]
garde = { version = "0.22", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
icu_segmenter = "1"
icu_casemap = "1"
hyphenation = { version = "0.8", features = ["embed_all"] }
walkdir = "2"
low-expectations = { version = "0.1.0", path = "../../../low-expectations/crates/low-expectations" }

[profile.mutants]
inherits = "dev"
opt-level = 0
