[workspace]
members = [
    "crates/domain/types",
    "crates/domain/types/runtime",
    "crates/domain/types/assertions",
    "crates/ports/outbound/traits",
    "crates/app/core",
    "crates/app/checks/core/runtime",
    "crates/app/checks/core/assertions",
    "crates/app/checks/catalog/runtime",
    "crates/app/checks/catalog/assertions",
    "crates/app/checks/test-support",
    "crates/app/checks/lexical/runtime",
    "crates/app/checks/lexical/assertions",
    "crates/app/checks/style-signals/runtime",
    "crates/app/checks/style-signals/assertions",
    "crates/app/checks/cadence-patterns/runtime",
    "crates/app/checks/cadence-patterns/assertions",
    "crates/app/checks/rhetorical-framing/runtime",
    "crates/app/checks/rhetorical-framing/assertions",
    "crates/app/checks/persona-signals/runtime",
    "crates/app/checks/persona-signals/assertions",
    "crates/app/checks/llm-slop/runtime",
    "crates/app/checks/llm-slop/assertions",
    "crates/app/checks/flow/runtime",
    "crates/app/checks/flow/assertions",
    "crates/app/checks/readability/runtime",
    "crates/app/checks/readability/assertions",
    "crates/app/checks/document-policy/runtime",
    "crates/app/checks/document-policy/assertions",
    "crates/adapters/inbound/cli",
    "crates/adapters/inbound/cli/runtime",
    "crates/adapters/inbound/cli/assertions",
    "crates/adapters/outbound/fs",
    "crates/adapters/outbound/fs/runtime",
    "crates/adapters/outbound/fs/assertions",
    "crates/adapters/outbound/parser",
    "crates/adapters/outbound/parser/runtime",
    "crates/adapters/outbound/parser/assertions",
    "packages/prosesmasher/assertions",
    "packages/prosesmasher",
]
resolver = "2"

[workspace.package]
version = "0.3.17"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/websmasher/prosesmasher"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
warnings = "deny"
dead_code = "deny"
unused_results = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
disallowed_methods = "deny"
disallowed_types = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
partial_pub_fields = "deny"
str_to_string = "deny"
implicit_clone = "deny"
as_conversions = "deny"
float_cmp = "deny"
lossy_float_literal = "deny"
wildcard_enum_match_arm = "deny"
rest_pat_in_fully_bound_structs = "deny"
large_stack_arrays = "deny"
needless_pass_by_value = "deny"
redundant_else = "deny"
large_futures = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
map_unwrap_or = "deny"
verbose_file_reads = "deny"

[workspace.dependencies]
garde = { version = "0.22", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
scraper = "0.26"
icu_segmenter = "1"
icu_casemap = "1"
hyphenation = { version = "0.8", features = ["embed_all"] }
walkdir = "2"
low-expectations = "0.1.0"

[profile.mutants]
inherits = "dev"
opt-level = 0

[profile.dist]
inherits = "release"
lto = false
