[package]
name = "prosesmasher-app-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal core checks crate for the prosesmasher workspace. Published to support the workspace dependency graph."
readme = "../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "development-tools"]

[dependencies]
prosesmasher-domain-types = { version = "0.1.6", path = "../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.1.6", path = "../../ports/outbound/traits" }
low-expectations.workspace = true
serde_json.workspace = true

[lints]
workspace = true
