[package]
name = "prosesmasher-domain-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal domain types crate for the prosesmasher workspace. Published to support the workspace dependency graph."
readme = "../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "development-tools"]

[lints]
workspace = true
