[package]
name = "prosesmasher-domain-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compatibility facade over the split domain types runtime crate."
readme = "../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "development-tools"]

[dependencies]
prosesmasher-domain-types-runtime = { version = "0.3.10", path = "runtime" }

[lints]
workspace = true
