[package]
name = "prosesmasher-adapters-inbound-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI adapter and composition root for prosesmasher"
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
prosesmasher-domain-types = { version = "0.1.5", path = "../../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.1.5", path = "../../../ports/outbound/traits" }
prosesmasher-app-core = { version = "0.1.5", path = "../../../app/core" }
prosesmasher-adapters-outbound-fs = { version = "0.1.5", path = "../../outbound/fs" }
prosesmasher-adapters-outbound-parser = { version = "0.1.5", path = "../../outbound/parser" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
low-expectations.workspace = true

[lints]
workspace = true
