[package]
name = "prosesmasher-adapters-inbound-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal CLI composition crate for the prosesmasher workspace. End users should install the `prosesmasher` package."
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
prosesmasher-adapters-inbound-cli-runtime = { version = "0.3.16", path = "./runtime" }

[lints]
workspace = true

[package.metadata.dist]
dist = false
