[package]
name = "prosesmasher-adapters-outbound-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem config and file adapters for prosesmasher"
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "development-tools"]

[dependencies]
prosesmasher-domain-types = { version = "0.1.1", path = "../../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.1.1", path = "../../../ports/outbound/traits" }
serde = { workspace = true }
serde_json = { workspace = true }
garde = { workspace = true }

[lints]
workspace = true
