[package]
name = "prosesmasher-adapters-outbound-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Compatibility facade over the split filesystem adapter runtime crate."
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "development-tools"]

[dependencies]
prosesmasher-adapters-outbound-fs-runtime = { version = "0.2.1", path = "runtime" }

[lints]
workspace = true
