[package]
name = "prosesmasher-adapters-outbound-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal parser adapter crate for the prosesmasher workspace. Published to support the workspace dependency graph."
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
prosesmasher-domain-types = { version = "0.1.7", path = "../../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.1.7", path = "../../../ports/outbound/traits" }
hyphenation = { workspace = true }
icu_segmenter = { workspace = true }
pulldown-cmark = { workspace = true }
scraper = { workspace = true }

[lints]
workspace = true
