[package]
name = "prosesmasher-adapters-outbound-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin facade parser crate for the prosesmasher workspace."
readme = "../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
prosesmasher-adapters-outbound-parser-runtime = { version = "0.3.8", path = "runtime" }

[lints]
workspace = true
