[package]
name = "prosesmasher-app-checks-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal shared check-test builders and result helpers for the prosesmasher workspace."
readme = "../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.1.7", path = "../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.1.7", path = "../core/runtime" }
low-expectations.workspace = true
serde_json.workspace = true

[lints]
workspace = true
