[package]
name = "prosesmasher-adapters-inbound-cli-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal CLI assertion helpers for the prosesmasher workspace."
readme = "../../../../../README.md"
publish = false

[dependencies]
prosesmasher-adapters-inbound-cli-runtime = { version = "0.3.3", path = "../runtime" }
low-expectations.workspace = true
clap.workspace = true
serde_json.workspace = true

[lints]
workspace = true
