[package]
name = "prosesmasher-adapters-inbound-cli-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal CLI runtime crate for the prosesmasher workspace."
readme = "../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.13", path = "../../../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.3.13", path = "../../../../ports/outbound/traits" }
prosesmasher-app-checks-core-runtime = { version = "0.3.13", path = "../../../../app/checks/core/runtime" }
prosesmasher-app-checks-catalog-runtime = { version = "0.3.13", path = "../../../../app/checks/catalog/runtime" }
prosesmasher-adapters-outbound-fs = { version = "0.3.13", path = "../../../outbound/fs" }
prosesmasher-adapters-outbound-parser = { version = "0.3.13", path = "../../../outbound/parser" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
low-expectations.workspace = true

[dev-dependencies]
prosesmasher-adapters-inbound-cli-assertions = { version = "0.3.13", path = "../assertions" }

[lints]
workspace = true

[package.metadata.dist]
dist = false
