[package]
name = "prosesmasher-adapters-outbound-parser-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal reusable parser assertions for the prosesmasher workspace."
readme = "../../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
prosesmasher-domain-types = { version = "0.3.16", path = "../../../../domain/types" }

[lints]
workspace = true
