[package]
name = "prosesmasher-adapters-outbound-parser-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal parser runtime crate for the prosesmasher workspace."
readme = "../../../../../README.md"
keywords = ["markdown", "validation", "writing", "lint"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
prosesmasher-domain-types = { version = "0.2.7", path = "../../../../domain/types" }
prosesmasher-ports-outbound-traits = { version = "0.2.7", path = "../../../../ports/outbound/traits" }
hyphenation = { workspace = true }
icu_segmenter = { workspace = true }
pulldown-cmark = { workspace = true }
scraper = { workspace = true }

[dev-dependencies]
prosesmasher-adapters-outbound-parser-assertions = { version = "0.2.7", path = "../assertions" }

[lints]
workspace = true
