[package]
name = "prosesmasher-app-checks-cadence-patterns-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal reusable cadence-pattern-check assertions for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.11", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.3.11", path = "../../core/runtime" }
prosesmasher-app-checks-cadence-patterns-runtime = { version = "0.3.11", path = "../runtime" }
prosesmasher-app-checks-test-support = { version = "0.3.11", path = "../../test-support" }
low-expectations.workspace = true

[lints]
workspace = true
