[package]
name = "prosesmasher-app-checks-catalog-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal check catalog crate for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.4", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.3.4", path = "../../core/runtime" }
prosesmasher-app-checks-lexical-runtime = { version = "0.3.4", path = "../../lexical/runtime" }
prosesmasher-app-checks-style-signals-runtime = { version = "0.3.4", path = "../../style-signals/runtime" }
prosesmasher-app-checks-cadence-patterns-runtime = { version = "0.3.4", path = "../../cadence-patterns/runtime" }
prosesmasher-app-checks-rhetorical-framing-runtime = { version = "0.3.4", path = "../../rhetorical-framing/runtime" }
prosesmasher-app-checks-persona-signals-runtime = { version = "0.3.4", path = "../../persona-signals/runtime" }
prosesmasher-app-checks-llm-slop-runtime = { version = "0.3.4", path = "../../llm-slop/runtime" }
prosesmasher-app-checks-flow-runtime = { version = "0.3.4", path = "../../flow/runtime" }
prosesmasher-app-checks-readability-runtime = { version = "0.3.4", path = "../../readability/runtime" }
prosesmasher-app-checks-document-policy-runtime = { version = "0.3.4", path = "../../document-policy/runtime" }
serde.workspace = true

[lints]
workspace = true
