[package]
name = "prosesmasher-app-checks-core-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal shared check contracts and runner crate for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.2.2", path = "../../../../domain/types" }
low-expectations.workspace = true

[dev-dependencies]
prosesmasher-app-checks-core-assertions = { version = "0.2.2", path = "../assertions" }
prosesmasher-app-checks-test-support = { version = "0.2.2", path = "../../test-support" }

[lints]
workspace = true
