[package]
name = "prosesmasher-app-checks-flow-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal reusable flow-check assertions for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.9", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.3.9", path = "../../core/runtime" }
prosesmasher-app-checks-flow-runtime = { version = "0.3.9", path = "../runtime" }
prosesmasher-app-checks-test-support = { version = "0.3.9", path = "../../test-support" }
low-expectations.workspace = true

[lints]
workspace = true
