[package]
name = "prosesmasher-app-checks-lexical-assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Internal reusable lexical-check assertions for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.3.15", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.3.15", path = "../../core/runtime" }
prosesmasher-app-checks-lexical-runtime = { version = "0.3.15", path = "../runtime" }
prosesmasher-app-checks-test-support = { version = "0.3.15", path = "../../test-support" }
low-expectations.workspace = true

[lints]
workspace = true
