[package]
name = "prosesmasher-app-checks-persona-signals-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal persona-signals checks runtime crate for the prosesmasher workspace."
readme = "../../../../../../README.md"

[dependencies]
prosesmasher-domain-types = { version = "0.2.0", path = "../../../../domain/types" }
prosesmasher-app-checks-core-runtime = { version = "0.2.0", path = "../../core/runtime" }
low-expectations.workspace = true
serde_json.workspace = true

[dev-dependencies]
prosesmasher-app-checks-persona-signals-assertions = { version = "0.2.0", path = "../assertions" }
prosesmasher-app-checks-test-support = { version = "0.2.0", path = "../../test-support" }

[lints]
workspace = true
